Bug 341116 - cannot edit IMAP flags; Save button stays grayed-out
Summary: cannot edit IMAP flags; Save button stays grayed-out
Status: RESOLVED FIXED
Alias: None
Product: Akonadi
Classification: Frameworks and Libraries
Component: akonadiconsole (other bugs)
Version First Reported In: 4.13
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-11-20 09:03 UTC by Erik Quaeghebeur
Modified: 2014-12-14 09:23 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Erik Quaeghebeur 2014-11-20 09:03:41 UTC
I cannot edit data using the Akonadiconsole. For example, when I try to add an IMAP flag to a mail message from an IMAP resource, the Save button stays grayed-out and does not become enabled when a flag is added to the list.

That the Save button should become enabled seems to be the intended behavior, as reported to me by Kevin Krammer on the kdepim-users list (cf. <http://lists.kde.org/?l=kdepim-users&m=141642026411293>).

Reproducible: Always
Comment 1 Erik Quaeghebeur 2014-11-28 09:17:12 UTC
Is there a command line interface to this flag data that I can use as a workaround (read flags, remove a flag, add a flag)?
Comment 2 Erik Quaeghebeur 2014-12-13 17:04:06 UTC
Still present in 4.14.3; updating version to latest (is 4.13!?).
Comment 3 Laurent Montel 2014-12-14 09:23:25 UTC
Git commit cf7d10dc767abaf9a00cb537fd0636b39ed9b620 by Montel Laurent.
Committed on 14/12/2014 at 09:22.
Pushed by mlaurent into branch 'KDE/4.14'.

Fix Bug 341116 - cannot edit IMAP flags; Save button stays grayed-out

M  +16   -0    akonadiconsole/browserwidget.cpp
M  +2    -0    akonadiconsole/browserwidget.h

http://commits.kde.org/kdepim/cf7d10dc767abaf9a00cb537fd0636b39ed9b620