Fix Bug 341116 - cannot edit IMAP flags; Save button stays grayed-out

BUG: 341116